<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EloWorld</string>
    <string name="action_settings">Paramètres</string>
    <string name="logo">logo</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="title_activity_login">Connectez-vous</string>
    <string name="title_activity_register">Créez votre compte</string>
    <string name="input_pseudo">Pseudo League of Legends </string>
    <string name="input_email">Email</string>
    <string name="input_email_2">Votre adresse électronique</string>
    <string name="imput_pwd">Mot de passe</string>
    <string name="imput_pwd_c">Confirmez mot de passe</string>
    <string name="new_compte">Créer un compte</string>
    <string name="register">Inscription</string>
    <string name="title_activity_user">Mon espace </string>
    <string name="title_register">Rejoignez-nous !</string>
    <string name="forgot_password">Mot de passe perdu ?</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="action_search">Rechercher </string>
    <string name="delete">Supprimer votre compte</string>
    <string name="msg">Nouveau message</string>
    <string name="disconect">Se déconnecter</string>
    <string name="disconect_msg">Voulez-vous vraiment quitter l\'application ?</string>
    <string name="out">Quitter</string>




    <string-array name="region">
        <item>Séléctionner une Région</item>
        <item>Brazil</item>
        <item>EU Nordic and East</item>
        <item>EU West</item>
        <item>Latin America North</item>
        <item>Latin America South</item>
        <item>North America</item>
        <item>Oceania</item>
        <item>Russia</item>
        <item>Korea</item>
        <item>Turkey</item>
    </string-array>
    <string-array name="menu_string">
        <item>Mon Profil</item>
        <item>Options</item>
        <item>Forum</item>
        <item>Déconnexion</item>
    </string-array>

    <string name="title_activity_dialog_email">Saisissez votre Email</string>
    <string name="title_activity_change_password">Nouveau mot de passe</string>
    <string name="title_activity_user_profil">UserProfilActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_messenger">Messagerie</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_search">Résultat</string>

    <string name="hello_world">Hello world!</string>
    <string name="kills">kills :</string>
    <string name="deaths">Deaths :</string>
    <string name="assists">assists :</string>
    <string name="title_activity_topics">Les sujets</string>

    <string name="topic">Créez votre topic</string>
    <string name="add">Ajouter</string>
    <string name="trefrech">rafraichir</string>
    <string name="logout">Déconnexion</string>
    <string name="title_activity_post">vos postes</string>

    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="title_activity_friend">Friend</string>
    <string name="follow">Suivre</string>
    <string name="title_activity_list_conversation">Notifications</string>
    <string name="title_activity_list_all_folow">Abonnements</string>

</resources>
