<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin_register"
    android:paddingRight="@dimen/activity_horizontal_margin_register"
    android:paddingTop="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin_register"
    tools:context="com.esgi.groupe1.eloworld.Login"
    android:background="#263238">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:contentDescription="@string/logo"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ew"/>

        <EditText
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:layout_below="@+id/logo"
            android:id="@+id/email"
            android:textColor="#263238"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:background="@drawable/edittext_top_bg"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:textColor="#263238"
            android:padding="10dp"
            android:background="@drawable/edittext_top_bg"
            android:inputType="textPassword"
            android:layout_below="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/imput_pwd"
            />
        <Button
            android:id="@+id/btnlog"
            android:background="@drawable/button_default_bg"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/password"
            android:text="@string/connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/nouveau"
        android:layout_below="@+id/btnlog"
        android:textColor="#fff"
        android:text="@string/new_compte"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
